--- a/src/style.css
+++ b/src/style.css
@@ -121,5 +121,22 @@ h2 {
 }
 
 #content {
-  padding: 30px;
+  padding: 30px;  
+}
+
+#code-exl {
+  display: flex;
+  justify-content: space-between;
+}
+
+#code-exl pre {
+  width: 49%;
+  margin: 0;
+  vertical-align: top; 
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+#code-exl h4 {
+  width: 49%;
 }
