--- a/src/style.css
+++ b/src/style.css
@@ -158,3 +158,25 @@ h2 {
   color: white;
   font-size: 24px;
 }
+
+#video-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.video-item {
+  flex: 1;
+  margin: 0 15px 20px;
+}
+
+.video-item h4 {
+  text-align: center;
+  margin-bottom: 15px;
+  margin-top: 0;
+}
+
+.video-item video {
+  width: 100%;
+  display: block;
+}
